Apps/code/deployment.yaml
# docker run -d --restart=always -p 3001:3001 -v code:/app/data --name code louislam/code:1


apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code
  name: code
  namespace: code
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: code
    spec:
      containers:
        - image: lscr.io/linuxserver/code-server:latest
          name: code
          ports:
            - containerPort: 8443
              protocol: TCP
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - mountPath: /config
              name: code-claim
      restartPolicy: Always
      volumes:
        - name: code-claim
          persistentVolumeClaim:
            claimName: code-claim
