Apps/code/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: code
  name: code-service
  namespace: code
spec:
  ports:
    - name: "8443"
      port: 80
      targetPort: 8443
  selector:
    app: code
